src/recodext.h


typedef struct recode_symbol *			RECODE_SYMBOL;
typedef struct recode_option_list *		RECODE_OPTION_LIST;
typedef struct recode_single *			RECODE_SINGLE;
typedef struct recode_step *			RECODE_STEP;
typedef struct recode_alias *			RECODE_ALIAS;
typedef struct recode_subtask *			RECODE_SUBTASK;
typedef const struct recode_option_list *	RECODE_CONST_OPTION_LIST;
typedef const struct recode_outer *		RECODE_CONST_OUTER;
typedef const struct recode_step *		RECODE_CONST_STEP;
typedef const struct recode_alias *		RECODE_CONST_ALIAS;
typedef const struct recode_task *		RECODE_CONST_TASK;
#define SET_SUBTASK_ERROR(Error, Subtask) \
  recode_if_nogo (Error, Subtask)
#define SUBTASK_RETURN(Subtask) \
  return (Subtask)->task->error_so_far < (Subtask)->task->fail_level
#define RETURN_IF_NOGO(Error, Subtask) \
  do {								\
    if (recode_if_nogo (Error, Subtask))			\
       SUBTASK_RETURN (Subtask);				\
  } while (false)
enum recode_error
  {
    RECODE_NO_ERROR,		
    RECODE_NOT_CANONICAL,	
    RECODE_AMBIGUOUS_OUTPUT,	
    RECODE_UNTRANSLATABLE,	
    RECODE_INVALID_INPUT,	
    RECODE_SYSTEM_ERROR,	
    RECODE_USER_ERROR,		
    RECODE_INTERNAL_ERROR,	
    RECODE_MAXIMUM_ERROR	
  };
struct recode_alias
  {
    const char *name;		
    RECODE_SYMBOL symbol;	
    struct recode_surface_list *implied_surfaces;
  };
enum recode_size
  {
    RECODE_1,			
    RECODE_2,			
    RECODE_4,			
    RECODE_N			
  };
struct recode_quality
  {
    enum recode_size in_size : 3; 
    enum recode_size out_size : 3; 
    bool reversible : 1;	
    bool slower : 1;		
    bool faster : 1;		
  };
struct recode_outer
  {
    bool auto_abort;
    bool use_iconv;
    struct recode_known_pair *pair_restriction;
    unsigned pair_restrictions;
    void *alias_table;
    RECODE_SYMBOL symbol_list;
    unsigned number_of_symbols;
    char **argmatch_charset_array;
    char **argmatch_surface_array;
    const char **realname_charset_array;
    const char **realname_surface_array;
    struct recode_single *single_list;
    unsigned number_of_singles;
    const unsigned char *one_to_same;
    RECODE_SYMBOL data_symbol;
    RECODE_SYMBOL tree_symbol; 
    RECODE_SYMBOL ucs2_charset; 
    RECODE_SYMBOL iconv_pivot; 
    RECODE_SYMBOL crlf_surface; 
    RECODE_SYMBOL cr_surface;	
    struct recode_quality quality_byte_reversible;
    struct recode_quality quality_byte_to_byte;
    struct recode_quality quality_byte_to_ucs2;
    struct recode_quality quality_byte_to_variable;
    struct recode_quality quality_ucs2_to_byte;
    struct recode_quality quality_ucs2_to_variable;
    struct recode_quality quality_variable_to_byte;
    struct recode_quality quality_variable_to_ucs2;
    struct recode_quality quality_variable_to_variable;
  };
enum recode_symbol_type
  {
    RECODE_NO_SYMBOL_TYPE,	
    RECODE_CHARSET,		
    RECODE_DATA_SURFACE,	
    RECODE_TREE_SURFACE		
  };
enum recode_data_type
  {
    RECODE_NO_CHARSET_DATA,	
    RECODE_STRIP_DATA,		
    RECODE_EXPLODE_DATA		
  };
struct recode_symbol
  {
    RECODE_SYMBOL next;
    unsigned ordinal;
    const char *name;
    const char *iconv_name;
    enum recode_data_type data_type;
    void *data;
    struct recode_single *resurfacer;
    struct recode_single *unsurfacer;
    enum recode_symbol_type type : 3;
    bool ignore : 1;
  };
struct recode_surface_list
  {
    RECODE_CONST_SYMBOL surface;
    struct recode_surface_list *next;
  };
typedef bool (*Recode_init) PARAMS ((RECODE_STEP, RECODE_CONST_REQUEST,
				     RECODE_CONST_OPTION_LIST,
				     RECODE_CONST_OPTION_LIST));
typedef bool (*Recode_term) PARAMS ((RECODE_STEP, RECODE_CONST_REQUEST));
typedef bool (*Recode_transform) PARAMS ((RECODE_SUBTASK));
typedef bool (*Recode_fallback) PARAMS ((RECODE_SUBTASK, unsigned));
struct recode_single
  {
    struct recode_single *next;
    RECODE_SYMBOL before;
    RECODE_SYMBOL after;
    short conversion_cost;
    void *initial_step_table;
    struct recode_quality quality;
    Recode_init init_routine;
    Recode_transform transform_routine;
    Recode_fallback fallback_routine;
  };
enum recode_step_type
  {
    RECODE_NO_STEP_TABLE,	
    RECODE_BYTE_TO_BYTE,	
    RECODE_BYTE_TO_STRING,	
    RECODE_UCS2_TO_BYTE,	
    RECODE_UCS2_TO_STRING,	
    RECODE_STRING_TO_UCS2,	
    RECODE_COMBINE_EXPLODE,	
    RECODE_COMBINE_STEP,	
    RECODE_EXPLODE_STEP		
  };
struct recode_step
  {
    RECODE_SYMBOL before;
    RECODE_SYMBOL after;
    struct recode_quality quality;
    enum recode_step_type step_type;
    void *step_table;
    void *local;
    Recode_transform transform_routine;
    Recode_fallback fallback_routine;
    Recode_term term_routine;
  };
struct recode_option_list
  {
    const char *option;
    RECODE_OPTION_LIST next;
  };
struct recode_request
  {
    RECODE_OUTER outer;
    bool verbose_flag : 1;
    char diaeresis_char;
    bool make_header_flag : 1;
    bool diacritics_only : 1;
    bool ascii_graphics : 1;
    RECODE_STEP sequence_array;
    size_t sequence_allocated;
    short sequence_length;
    char *work_string;		
    size_t work_string_length;	
    size_t work_string_allocated; 
    const char *scan_cursor;	
    char *scanned_string;	
  };
struct recode_read_only_text
  {
    const char *name;
    FILE *file;
    const char *buffer;
    const char *cursor;
    const char *limit;
  };
struct recode_read_write_text
  {
    const char *name;
    FILE *file;
    char *buffer;
    char *cursor;
    char *limit;
  };
enum recode_sequence_strategy
  {
    RECODE_STRATEGY_UNDECIDED,	
    RECODE_SEQUENCE_IN_MEMORY,	
    RECODE_SEQUENCE_WITH_FILES,	
    RECODE_SEQUENCE_WITH_PIPE	
  };
enum recode_swap_input
  {
    RECODE_SWAP_UNDECIDED,	
    RECODE_SWAP_NO,		
    RECODE_SWAP_YES		
  };
struct recode_subtask
  {
    RECODE_TASK task;
    RECODE_CONST_STEP step;
    struct recode_read_only_text input;
    struct recode_read_write_text output;
    unsigned newline_count;
    unsigned character_count;
  };
#define GOT_CHARACTER(Subtask) \
  ((Subtask)->character_count++)
#define GOT_NEWLINE(Subtask) \
  ((Subtask)->newline_count++, (Subtask)->character_count = 0)
struct recode_task
  {
    RECODE_CONST_REQUEST request;
    struct recode_read_only_text input;
    struct recode_read_write_text output;
    enum recode_sequence_strategy strategy : 3;
    bool byte_order_mark : 1;
    enum recode_swap_input swap_input : 3;
    enum recode_error fail_level : 5;
    enum recode_error abort_level : 5;
    enum recode_error error_so_far : 5;
    RECODE_CONST_STEP error_at_step;
  };
struct recode_known_pair
  {
    unsigned char left;		
    unsigned char right;	
  };
typedef unsigned short recode_ucs2;
#define STRIP_SIZE 8
struct strip_data
  {
    const recode_ucs2 *pool;
    const short offset[256 / STRIP_SIZE];
  };
struct ucs2_to_byte
  {
    recode_ucs2 code;		
    unsigned char byte;		
  };
struct ucs2_to_string
  {
    recode_ucs2 code;		
    unsigned short flags;	
    const char *string;		
  };
#define ALLOC_SIZE(Variable, Size, Type) \
  (Variable = (Type *) recode_malloc (outer, (Size)), Variable)
#define ALLOC(Variable, Count, Type) \
  ALLOC_SIZE (Variable, (Count) * sizeof (Type), Type)
#define REALLOC(Variable, Count, Type) \
  (Variable = (Type *) recode_realloc (outer, Variable,		\
				       (Count) * sizeof(Type)), \
   Variable)
enum alias_find_type
{
  SYMBOL_CREATE_CHARSET,	
  SYMBOL_CREATE_DATA_SURFACE,	
  SYMBOL_CREATE_TREE_SURFACE,	
  ALIAS_FIND_AS_CHARSET,	
  ALIAS_FIND_AS_SURFACE,	
  ALIAS_FIND_AS_EITHER		
};
int code_to_ucs2 (RECODE_CONST_SYMBOL, unsigned);
#define DONE NOT_A_CHARACTER
#define ELSE BYTE_ORDER_MARK_SWAPPED
RECODE_SINGLE declare_single
  PARAMS ((RECODE_OUTER, const char *, const char *,
	   struct recode_quality,
	   bool (*) (RECODE_STEP, RECODE_CONST_REQUEST,
		     RECODE_CONST_OPTION_LIST, RECODE_CONST_OPTION_LIST),
	   bool (*) (RECODE_SUBTASK)));
extern const recode_ucs2 ucs2_data_pool[];
#define REPLACEMENT_CHARACTER 0xFFFD
#define BYTE_ORDER_MARK 0xFEFF
#define BYTE_ORDER_MARK_SWAPPED 0xFFFE
#define NOT_A_CHARACTER 0xFFFF
#define NUL '\0'
# define get_byte(Subtask) \
    get_byte_helper ((Subtask))
# define put_byte(Byte, Subtask) \
    put_byte_helper ((Byte), (Subtask))
# define get_byte(Subtask) \
    ((Subtask)->input.file					\
     ? getc ((Subtask)->input.file)				\
     : (Subtask)->input.cursor == (Subtask)->input.limit	\
     ? EOF							\
     : (unsigned char) *(Subtask)->input.cursor++)
# define put_byte(Byte, Subtask) \
    ((Subtask)->output.file					\
     ? (putc ((char) (Byte), (Subtask)->output.file), 0)	\
     : (Subtask)->output.cursor == (Subtask)->output.limit	\
     ? (put_byte_helper ((int) (Byte), (Subtask)), 0)		\
     : (*(Subtask)->output.cursor++ = (Byte), 0))