src/recode.h


typedef struct recode_outer * 			RECODE_OUTER;
typedef struct recode_request *			RECODE_REQUEST;
typedef struct recode_task *			RECODE_TASK;
typedef const struct recode_request *		RECODE_CONST_REQUEST;
typedef const struct recode_symbol *		RECODE_CONST_SYMBOL;
enum recode_list_format
{
  RECODE_NO_FORMAT,		
  RECODE_DECIMAL_FORMAT,	
  RECODE_OCTAL_FORMAT,		
  RECODE_HEXADECIMAL_FORMAT,	
  RECODE_FULL_FORMAT		
};
enum recode_programming_language
{
  RECODE_NO_LANGUAGE,		
  RECODE_LANGUAGE_C,		
  RECODE_LANGUAGE_PERL		
};